图的应用部分总结

--- a/408数据结构/Note/图.md
+++ b/408数据结构/Note/图.md
@@ -328,24 +328,285 @@ void BFS(int s)
 
 # 图的应用
 
-## 最短路
-
-### $BFS$求最短路
-
-### $Dijkstra$算法
-
-### $Floyd$算法
-
 ## 最小生成树
 
 ### 最小生成树的性质
 
+- 若图 G 中存在权值相同的边,则 G 的最小生成树可能不唯一,即最小生成树的树形不唯一。当图 G 中的各边权值互不相等时,G 的最小生成树是唯一的
+- 若无向连通图 G 的边数比顶点数少 1,即 G 本身是一棵树时,则 G 的最小生成树就是它本身。
+- 虽然最小生成树不唯一,但其对应的边的权值之和总是唯一的,而且是最小的。
+- 最小生成树的边数为顶点数减 1。
+
 ### $Prim$ 算法
+
+#### 算法解释
+
+![20240518151809](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240518151809.png)
+
+- 定义$dist(u)$表示连接 $C$(注意 $C$ 是点集,换言之是一个图) 中任意点和$u$的边的边权的最小值,我们把$dist(u)$简称为$u$到$C$的距离.以下是具体流程:
+- 将任意点 $x$ 加入 $C$,此时 $C$ 中只有一个点 $x$;对于其他点 $y$,如果 $×,y$ 之间有边,则 $dist(y)$等于这些边的边权的最小值,否则 $dist(y)$等于无穷大
+- 在每一轮中,将 $dist$ 最小(不能是无穷大)的还不在 $C$ 中的顶点 $z$ 加入 $C$,同时将连接 $C$ 和 $z$ 的边权最小的边加入最小生成树的边集,并且用 $z$ 连出去的边尝试更新其它点的 $dist$
+- 当没有新的点加入 $C$ 时,算法结束.此时若所有点都加入了 $C$,意味着我们到了最小生成树,否则意味着图不连通.
+- 朴素$Prim$时间复杂度是 $O(n^2+m)$, $n$ 表示点数,$m$ 表示边数
+
+#### 代码实现
+
+```c++ {.line-numbers}
+struct Node
+{
+    int y, v;
+    Node(int _y, int _v)
+    {
+        y = _y;
+        v = _v;
+    };
+};
+vector<Node> edge[N];
+int n, m, dist[N];
+bool b[N]; // b记录的是该点是否加入到了集合C中
+int Prim()
+{
+    memset(b, false, sizeof(b));
+    memset(dist, 127, sizeof(dist));
+    dist[1] = 0;
+    int ans = 0, tot = 0; // ans是当前最小生成树的边权和,tot表示当前集合C中一共有多少点,如果tot==n则存在最小生成树,反之不存在
+    for (;;)
+    {
+        int x = -1; // 不在C中且dist最小的点
+        for (int i = 1; i <= n; i++)
+            if (!b[i] && dist[i] < 1 << 30)       // 找到一个不在b中,且dist不是无穷大的点
+                if (x == -1 || dist[i] < dist[x]) // 如果这个点之前都没有被找到或者并且该点的距离是最小的
+                    x = i;
+        if (x == -1)
+            break; // 没有符合的点,没有新的点可以加入
+        ++tot;
+        ans += dist[x];
+        b[x] = true;
+        for (auto i : edge[x])
+            dist[i.y] = min(dist[i.y], i.v);// 更新其他边
+    }
+    if (tot != n)
+        return -1;
+    else
+        return ans;
+}
+```
 
 ### $Kruskal$ 算法
 
-## 有向无环图
+#### 算法解释
+
+![20240518152208](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240518152208.png)
+
+- 与 $Prim$ 不同,$Kruskal$ 是以一条条添加边的形式求最小生成树的
+- 为了把一开始 $n$ 个分散的点连成一棵树,$Kruskal$ 算法使用了数据结构中的并查集
+- 时间复杂是$O(mlogn)$,n 表示点数,m 表示边数
+- 算法流程如下:
+  - 初始化并查集,一开始所有点的代表元都是它自己,每个点本身构成了一个集合;
+  - 将所有边按照边权从小到天的顺序排序;
+  - 按边权从小到大的顺序依次枚举所有边,如果当前这条边连接的两个顶点位于同一个集合(它们的代表元是一样的),则什么都不做,否则
+    - 将这条边添加到最小生成树的边集里
+    - 将这条边连接的两个点所在的集合合并,这里会用到并查集的合并操作
+  - 直到只剩下一个集合,算法结束
+
+#### 代码实现
+
+```c++ {.line-numbers}
+struct Node
+{
+    int x, y, v;
+    bool operator<(const Node &A) const
+    {
+        return v < A.v;
+    }
+} a[N];
+int n, m, fa[N];
+int findset(int i)
+{
+    if (i == fa[i])
+        return i;
+    return fa[i] = findset(fa[i]);
+}
+int Kruskal()
+{
+    for (int i = 1; i <= n; i++)
+        fa[i] = i;
+    sort(a + 1, a + m + 1);
+    int ans = 0, cnt = n; // ans为当前最小生成树权值和,cnt是当前有多少个集合
+    for (int i = 1; i <= m; i++)
+    {
+        int x = findset(a[i].x), y = findset(a[i].y);
+        if (x != y)
+        {
+            fa[x] = y;
+            ans += a[i].v;
+            --cnt;
+        }
+        if (cnt == 1)
+            break;
+    }
+    if (cnt != 1)
+        return -1;
+    else
+        return ans;
+}
+```
+
+## 最短路
+
+### $Dijkstra$算法
+
+#### 原理
+
+- 通常用于解决无负权边图的最短路
+- 我们要维护一个顶点集合 $C$,满足对于所有集合 $C$ 中的顶点 $x$,我们都已经找到了起点 $S$ 到 $x$ 的最短路,此时 $dist(x)$记录的就是最终最短路的长度
+- 时间复杂是$O(n^2+m)$, **_n_**表示点数,**_m_**表示边数
+
+#### 相关概念
+
+- 对于无向图中的一条边$(u \leftrightarrow v)$,可以看作有向图中两条边$(u \leftrightarrow v)$和$(v \leftrightarrow u)$的结合,我们可以用这种方式将无向图转换成有向图,因此我们接下来介绍的都是有向图上的最短路算法.
+- 我们规定以下符号
+  - $G=<V,E>$代表我们要处理的简单有向图
+  - $n=|V|,m=|E|$代表顶点数和边数(||表示集合中的元素总数)
+  - $l(u,v)$代表$u$到$v$的边的长度(边权)
+  - $S$表示起点,$T$表示终点
+  - $dist(u)$代表我们当前求出的从$S$到$u$的最短路径的长度,后面简称为$u$的距离
+
+#### 算法流程
+
+- 我们要维护一个顶点集合 $C$,满足对于所有集合 $C$ 中的顶点 $X$,我们都已经找到了起点 $S$ 到 $x$ 的最短路,此时 $dist(x)$记录的就是最终最短路的长度
+  - 将 $C$ 设置为空,将 $S$ 的距离设置为 0,其余顶点的距离设置为无穷大
+  - 在每一轮中,将离起点最近的($dist$ 最小,不能是无限大)的还不在 $C$ 中的顶点加入 $C$,并且用这个点连出去的边通过松弛操作尝试更新其它点的 $dist$
+  - 当到达目标终点(如果目标终点存在的话)或者没有新的点加入 $C$ 时,算法结束.
+
+#### 代码实现
+
+```c++ {.line-numbers}
+struct Node
+{
+    int y, v;// y表示该点连到哪里,v表示边权
+    Node(int _y, int _v)
+    {
+        y = _y;
+        v = _v;
+    };
+};
+vector<Node> edge[N + 1];
+int n, m, dist[N + 1];
+bool b[N + 1];
+int Dijkstra(int s, int t)
+{
+    memset(b, false, sizeof(b));
+    memset(dist, 127, sizeof(dist));
+    dist[s] = 0;
+    for (;;)
+    {
+        int x = -1;// x是当前不在C中且离起始点最近的点的下标
+        for (int i = 1; i <= n; i++)
+            if (!b[i] & dist[i] < 1 << 30)// 选择出不在C中且距离不是无穷大的点
+                if (x == -1 && dist[i] < dist[x])
+                    x = i;
+        if (x == t || x == -1)// C中没有点可以加进去或已经走到目标点的时候结束循环
+            break;
+        b[x] = true;// 将该点加入C中并进行松弛操作
+        for (auto i : edge[x])
+            dist[i.y] = min(dist[i.y], dist[x] + i.v);
+    }
+    return dist[t];
+}
+```
+
+### $Floyd$算法
+
+#### 原理
+
+- 时间复杂度是$O(n^3)$,$n$表示点数
+- 主要用于求任意两结点之间的最短路
+- 适用于任何图,不管有向无向,边权正负,但是最短路必须存在(不能有个负环)
+
+#### 代码
+
+```c++ {.line-numbers}
+memset(f, 127, sizeof(f));
+f[0][i][j] = a[i][j]; // a数组为存储有向图边权的矩阵,若存在从i到j的边,a[i][j]记录的是这些边的边权的最小值,若不存在从i到j的边,a[i][j]为无穷大;对于所有i,a[i][i]=0
+for (int k = 1; k <= n; k++)
+    for (int i = 1; i <= n; i++)
+        for (int j = 1; j <= n; j++)
+            f[k][i][j] = min(f[k - 1][i][j], f[k - 1][i][k] + f[k - 1][k][j]);
+```
+
+- $f[k][i][j]$表示从$i$到$j$,中间可以经过$1 \sim k$**号**顶点的最短路径的长度
+- 最终的迭代中,可以知道的是,$f[k][i][j]$的最小值取不取有两种情况,最小值要么经过 $k$ **号**顶点,要么不经过 $k$ **号**顶点,从这两种情况中取得$f[k][i][j]$的最小值
+- $f[n][u][v]$即为从$u$到$v$的最短路径的长度,因为其本意应为从$i$到$j$中间经过$n$个顶点的最短长度,而一共只有$n$个顶点,所以应为从$u$到$v$的最短路径长度,若等于无穷大则表示不存在从$u$到$v$的路径
 
 ## 拓扑排序
 
-## 关键路径
+![20240518154232](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240518154232.png)
+
+- **有向无环图**:若一个有向图中不存在环,则称为有向无环图,简称 DAG 图
+- 如果用 DAG 图表示一个工程,其顶点表示活动, 用有向边 $<a,b>$ 表示 a 活动必须早于 b 活动进行, 那么我们将它叫做 **AOV 网**(顶点表示活动的网络)
+
+### 拓扑排序简介
+
+- 时间复杂度 $O(n+m)$, $n$表示点数,$m$表示边数
+- 拓扑排序$(Topological Sorting, TopoSort)$是对有向无环图$(DAG, Directed Acyclic Graph)$的顶点进行的一种线性排序,排序序列中每个顶点都会且仅会出现一次,且对于所有有向边$u \to v$,排完序后 $u$ 都在 $v$ 前面
+  - 举例:学完预备课才可以学基础课,学完基础课才可以学提高课,这是一个三点二边的图,如果该图闭环,那么寄了.如果改图顺序不对,那也寄了.因此如果想要有拓扑排序,就必须是有向无环图.
+- 一个有向无环图可能存在多种有向无环图拓扑排序的结果,如下
+  ![20240518154724](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240518154724.png)
+
+### 排序流程
+
+- 在拓扑排序中,我们用队列 $L$ 记录到目前为止的拓扑序列,用集合 $S$ 记录所有不在 $L$ 中的入度为 0 的顶点
+- 首先遍历整张图上的顶点,如果一个顶点的入度为 0,将它加入 $S$;
+- 当 $S$ 不为空时
+  - 在 $S$ 中任取一个顶点 $x$,将 $x$ 加入到队列 $L$ 的队尾,并把 $x$ 从 $S$ 中删去
+  - 遍历从 $x$ 出发的边$x \to y$,把这条边删掉,如果 $y$ 的入度变成了 0 则将其加入到 $S$ 中
+- 循环结束时,如果所有点都加入了 $L$,那么我们就找到了一个合法的拓扑序列,否则可以证明图中存在环；
+- $L,S$ 一般是用同一个队列实现
+
+#### 模板
+
+```c++ {.line-numbers}
+vector<int> edge[N];
+int n, m, q[N], d[N]; // d记录了每个点一开始的入度
+inline void TopoSort()
+{
+    int front = 1, rear = 0;
+    for (int i = 1; i <= n; i++)
+        if(!d[i])
+            q[++rear] = i;// 将所有入度为0的点加入q中
+    while (front <= rear)
+    {
+        int x = q[front];
+        ++front; // 出队
+        for (auto y : edge[x]) // 减边
+            if (--d[y] == 0)
+                q[++rear] = y;
+    }
+    if (rear == n)
+        // 存在合法拓扑序
+    else
+    // 存在不合法拓扑序
+}
+```
+
+### 关键路径
+
+![20240518161917](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240518161917.png)
+
+- AOE 网:以顶点表示事件,以有向边表示活动,边上的权值表示完成该活动的开销的带权有向图。(用边表示活动的网络)
+- AOE 网的两个重要性质:
+  - 只有在某顶点表示的事件发生后,从该顶点出发的各有向边所代表的活动才能开始;
+  - 只有进入某顶点的所有有向边所代表的活动都完成时,该顶点所代表的事件才能发生
+- 从开始顶点到结束顶点的路径中,路径长度最大的那条路径我们称之为关键路径。关键路径上的活动我们称之为关键活动。
+- 关键路径的意义在于, 当我们按这个路径将关键活动全部完成时, 其他所有活动也可以并行完成。如果边上的权值代表完成这项活动的时间, 那么关键路径的总权值就代表整个工程完成的最短时间。
+- 事件$\mathrm{v}_{\mathrm{k}}$的最早发生时间 ve(k):从源点 1 到顶点$\mathrm{v}_{\mathrm{k}}$的最长路径长度。
+- 事件$\mathbf{v}_k$的最晚发生时间 vl(k):在不推迟整个工程完成的前提下，保证它的后继事件$\mathbf{v}_{j}$在其最晚发生时间可以发生时，该事件必须发生的时间。
+- 活动$\mathrm{a}_{\mathrm{i}}$的最早开始时间 e(i):该活动弧的起点所表示的事件最早发生时间。
+- 活动$\mathrm{a}_\mathrm{i}$的最迟开始时间 I(i):该活动弧的终点所表示的事件的最晚发生时间与该活动所需事件之差。
+- 求关键路径的算法步骤如下：
+  - 从源点出发，令 $\nu_e($源点)=0, 按拓扑有序求其余顶点的最早发生时间 $\nu_e()$。
+  - 从汇点出发，令 $v_t($汇点$)=v_e($汇点), 按逆拓扑有序求其余顶点的最迟发生时间 $\nu_t()$
+  - 根据各顶点的 $v_e()$值求所有弧的最早开始时间 $e()$。
+  - 根据各顶点的 $v_{l}()$值求所有弧的最迟开始时间 $l()$。
+  - 求 AOE 网中所有活动的差额$d()$,找出所有$d()=0$的活动构成关键路径。
