查找和排序大纲拟定和查找总结

--- a/408数据结构/Note/图.md
+++ b/408数据结构/Note/图.md
@@ -43,7 +43,7 @@
 
 > 概念辨析:极大连通子图,极小连通子图,连通分量,生成树,生成森林
 >
-> <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240504125057.png" width = 70%/></div>
+> <div align=center><img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240504125057.png" width = 70%/></div>
 > 如图:c是一个非连通图,其由a和b两个连通图组成,对于c来说,a和b是它的两个连通分量,a和b分别是两棵生成树,共同组成了生成森林.
 
 ## 图的基本术语
@@ -51,7 +51,7 @@
 - 顶点的度,出度和入度:
   - 顶点的度:图中以该顶点为一个端点的边的数目
   - 无向图中顶点$v$的度是指依附于该顶点的边的条数,记为 $TD(v)$.具有$n$个顶点,$e$条边的无向图中,所有顶点的度总和是边数的二倍,即 $\sum_{i=1}^nTD(v_i)=2e$
-  - 有向图中顶点$v$的度分为入度和出度.入度是以顶点 v 为终点的有向边的条数记为$ID(v)$
+  - 有向图中顶点$v$的度分为入度和出度.入度是以顶点 $v$ 为终点的有向边的条数记为$ID(v)$
   - 出度是以顶点$v$为起点的有向边的数目,记为 $OD(v)$.具有$n$个顶点,$e$条边的有向图中,全部顶点的入度之和与出度之和相等,等于边数.即$\sum_{i=1}^n ID(v_i)=\sum_{i=1}^n OD(v_i)=e$
 - 路径和路径长度,简单路径:
   - 路径:在图中,顶点 $\mathrm{V_p}$ 到顶点 $\mathrm{V_q}$ 之间的顶点序列 $\mathrm{V_p},\mathrm{V_a},\mathrm{V_b}...\mathrm{V_q}$
@@ -344,7 +344,7 @@ void BFS(int s)
 ![20240518151809](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240518151809.png)
 
 - 定义$dist(u)$表示连接 $C$(注意 $C$ 是点集,换言之是一个图) 中任意点和$u$的边的边权的最小值,我们把$dist(u)$简称为$u$到$C$的距离.以下是具体流程:
-- 将任意点 $x$ 加入 $C$,此时 $C$ 中只有一个点 $x$;对于其他点 $y$,如果 $×,y$ 之间有边,则 $dist(y)$等于这些边的边权的最小值,否则 $dist(y)$等于无穷大
+- 将任意点 $x$ 加入$C$,此时 $C$ 中只有一个点 $x$;对于其他点 $y$,如果 $×,y$ 之间有边,则 $dist(y)$等于这些边的边权的最小值,否则 $dist(y)$等于无穷大
 - 在每一轮中,将 $dist$ 最小(不能是无穷大)的还不在 $C$ 中的顶点 $z$ 加入 $C$,同时将连接 $C$ 和 $z$ 的边权最小的边加入最小生成树的边集,并且用 $z$ 连出去的边尝试更新其它点的 $dist$
 - 当没有新的点加入 $C$ 时,算法结束.此时若所有点都加入了 $C$,意味着我们到了最小生成树,否则意味着图不连通.
 - 朴素$Prim$时间复杂度是 $O(n^2+m)$, $n$ 表示点数,$m$ 表示边数
