查找基础部分总结+排序重点标注

--- a/408数据结构/Note/排序.md
+++ b/408数据结构/Note/排序.md
@@ -4,7 +4,7 @@
 
 ## 插入排序
 
-### 直接插入排序
+### <font color="red">直接插入排序</font>
 
 - 算法原理
 - 算法解释
@@ -15,19 +15,19 @@
 
 ### 折半插入排序
 
-### 希尔排序
+### <font color="red">希尔排序</font>
 
 ## 交换排序
 
 ### 冒泡排序
 
-### 快速排序
+### <font color="red">快速排序</font>
 
 ## 选择排序
 
 ### 简单选择排序
 
-### 堆排序
+### <font color="red">堆排序</font>
 
 ## 归并排序
 
@@ -43,7 +43,7 @@
 
 ## 最佳归并树
 
-# 排序算法的比较
+# <font color="red">排序算法的比较</font>
 
 ## 性能分析
 
