--- a/408数据结构/Note/查找.md
+++ b/408数据结构/Note/查找.md
@@ -8,7 +8,7 @@
   $$
       ASL=\sum_{i=1}^n P_iC_i
   $$
-  其中:$n$是查找表中数据元素的个数,$P_i$是查找第$i$个元素的概率(无权时认为每个元素等概率出现,即对应$P_i=\dfrac{1}{n}$),$C_i$是查找第$i$个元素需要比较的次数。使用不同的查找算法,求得的 ASL 也会不同。ASL 具体分为查找成功和查找失败两种情况:
+  其中:$n$是查找表中数据元素的个数,$P_i$是查找第$i$个元素的概率(无权时认为每个元素等概率出现,即对应$P_i=\dfrac{1}{n}$),$C_i$是查找第$i$个元素需要比较的次数.使用不同的查找算法,求得的 $ASL$ 也会不同.$ASL$ 具体分为查找成功和查找失败两种情况:
   $$
     \mathrm{ASL}_{\mathrm{succ}}=\frac{\text{总关键字比较次数}}{\text{查找元素个数}}
   $$
@@ -27,43 +27,178 @@
 - 从线性表的一端开始,**逐个**检查关键字是否满足给定的条件
 - 若查找到某个元素的关键字满足给定条件,则查找成功,返回该元素在线性表中的位置
 - 若已经查找到表的另一端,但还没有查找到符合给定条件的元素,则返回查找失败的信息
-- 引入"哨兵"可以使查找过程中数组不越界,避免不必要的判断语句,提高程序效率
+- 引入<font color="red">"哨兵"</font>可以使查找过程中数组不越界,避免不必要的判断语句,提高程序效率.有些书上数据元素是从数组的 `1` 号地址空间开始存储的,这样空出来的 `0` 号地址空间可用于存放"哨兵","哨兵"也就是每次需要查找的数据元素.这种方式可以使得从后往前找时一定可以结束循环(循环条件为 `key!=a[O]`).添加"哨兵"的优点是在一定程度上可以避免某些不必要的判断语句(如判断数组是否越界),从而提高程序效率.
+- 若在查找之前就已知表是关键字有序的,则查找失败时可以不用再比较到表的另一端就能返回查找失败的信息,从而降低查找失败的平均查找长度.
 
 ### 代码
 
 ```c++{.line-numbers}
-
+// arr为查找表,n为元素个数,key查找关键字
+int Search(int arr[], int n,int key)
+{
+    for (int i = 0; i < n; i++)
+        if (arr[i] == key)
+            return i;
+    return -1;
+}
 ```
 
 ### 性能分析
+
+对于有$n$ 个元素的表,给定值 key 与表中第$i$个元素相等,即定位第 $i$ 个元素时,需进行 $n-i+1$次关键字的比较,即$C_i=n-i+1$.查找成功时,顺序查找的平均长度为
+
+$$
+  \mathrm{ASL}_{\text{成功}}=\sum_{i=1}^{n}P_{i}(n-i+1)
+$$
+
+当每个元素的查找概率相等,即$P_i=\dfrac{1}{n}$时,有
+
+$$
+  \mathrm{ASL}_{\text{成功}} = \sum _ { i = 1 }^{n}P_{i}(n-i+1)=\frac{n+1}{2}
+$$
+
+当查找不成功时,与表中各关键字的比较显然为$n+1$次,即$ASL_{不成功}=n+1$.
 
 ## 折半查找
 
 ### 定义
 
-### 代码
+- 又叫二分查找,仅适用于有序的顺序表.
+- <font color="red">折半查找的基本思想</font>
+  - 首先将给定值 key 与**表中中间位置**的元素比较,若相等,则查找成功,返回该元素的存储位置
+  - 若不等,则所需查找的元素只能在中间元素以外的前半部分或后半部分
+  - 然后在缩小的范围内继续进行同样的查找.重复上述步骤,直到找到为止或查找失败
+- 折半查找的过程可用二叉树来描述,被称为判定树.显然该判定树是一个二叉树
+  <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240604163727.png" width = 80%/></div>
+
+### <font color="red">代码</font>
+
+```c++{.line-numbers}
+int binarySearch(int start, int end, int key)
+{
+    int ret = -1; // 未搜索到数据返回-1下标
+    int mid;
+    while (start <= end)
+    {
+        mid = start + ((end - start) >> 1); // 直接平均可能会溢出,所以用这个算法
+        if (arr[mid] < key)
+            start = mid + 1;
+        else if (arr[mid] > key)
+            end = mid - 1;
+        else
+        { // 最后检测相等是因为多数搜索情况不是大于就是小于
+            ret = mid;
+            break;
+        }
+    }
+    return ret; // 单一出口
+}
+```
 
 ### 性能分析
+
+- 用折半查找法查找到给定值的比较次数最多不会超过树的高度,等概率查找时,查找成功的平均查找长度为:
+  $$
+    \mathrm{ASL}=\dfrac{1}{n}\sum_{i=1}^{n}l_{i}=\dfrac{1}{n}(1\times1+2\times2+\cdots+h\times2^{h-1})=\dfrac{n+1}{n}\mathrm{log}_{2}(n+1)-1\approx\mathrm{log}_{2}(n+1)-1
+  $$
+  $h$是树的高度,并且元素个数为$n$时树高$h=\left\lceil\log_2(n+1)\right\rceil$.所以,折半查找的时间复杂度为$O(\log_2n)$平均情況下比顺序查找的效率高.
 
 ## 分块查找
 
 ### 定义
 
-### 代码
+- 分块查找又称**索引顺序查找**,它吸取了顺序查找和折半查找冬自的优点,既有动态结构,又适于快速查找.
+- 分块查找的基本思想:将查找表分为若干子块、块内的元素可以无序,但块间的元素是有序的,即第一个块中的最大关键字小于第二个块中的所有记录的关键字
 
 ### 性能分析
 
+分块查找的平均查找长度为索引查找和块内查找的平均长度之和。设索引查找和块内查找的平均查找长度分别为 $L_\mathrm{l}$和 $L_\mathrm{S}$,则分块查找的平均查找长度为
+
+$$
+  ASL= L_{\mathrm{i} }+ L_{\mathrm{S} }
+$$
+
+将长度为$n$的查找表均匀地分为$b$块,每块有 $s$个记录,在等概率情况下,若在块内和索引表中均采用顺序查找,则平均查找长度为
+
+$$
+  \mathrm{ASL}=L_i+L_\mathrm{S}=\frac{b+1}{2}+\frac{s+1}{2}=\frac{s^2+2s+n}{2s}
+$$
+
+此时,若 $s=\sqrt{n}$,则平均查找长度取最小值$\sqrt{n}+1$
+
 # [树形查找](树.md#树型查找)
 
-此处在树部分树的应用章节的[树型查找](树.md#树型查找)已作解释,此处不再解释,点击即可跳转至树该部分。
+此处在树部分树的应用章节的[树型查找](树.md#树型查找)已作解释,此处不再解释,点击即可跳转至树该部分.
 
 # 散列表(哈希表)
 
-## 定义
+## 基本概念
 
-## 散列函数
+- 散列函数(也称哈希函数):一个把查找表中的关键字映射成该关键字对应的地址的函数,记为 `Hash(key)=Addr`(这里的地址可以是数组下标、索引或内存地址等)。
+- 冲突和同义词:对不同的关键字进行散列计算可能得到同一散列地址,即 $\mathrm{key}_1\neq\mathrm{key}_2$,而 $H(\mathrm{key}_1)=H(\mathrm{key}_2)$,这种现象称为冲突.具有相同函数值的关键字对该散列函数来说称为同义词,$\mathrm{key}_1$与$\mathrm{key}_1$互为同义词.
+- 散列表(也称哈希表):根据关键字而直接进行访问的数据结构.
+- 装填因子 $\alpha$ :装填因子标志散列表的装满程度.
+  $$
+     \alpha = \dfrac{表中填入的数据元素个数}{散列表的长度}
+  $$
+
+## 散列函数构造函数
+
+### 数学分析法
+
+设关键字是$r$进制数(如十进制数),而 $r$ 个数码在各位上出现的频率不一定相同,可能在某些位上分布均匀一些,每种数码出现的机会均等:而在某些位上分布不均匀,只有某几种数码经常出现,此时应选取数码分布较为均匀的若干位作为散列地址
+
+### 平方取中法
+
+取关键字的平方值的中间几位作为散列地址.具体取多少位要视实际情况而定.
+
+### 直接定址法
+
+直接取关键字的某个线性函数值为散列地址,散列函数为
+
+$$
+      H(key)=key \text{或}H(key) = a \times key+b
+$$
+
+式中,a 和 b 是常数.这种方法计算最简单,且不会产生冲突.
+
+### <font color="red">除留取余法</font>
+
+假定散列表表长为$m$,取一个不大于$m$ 但最接近或等于 $m$ 的质数$p$,利用以下公式把关键字转换成散列地址。散列函数为
+
+$$
+  H(key)=key \% p
+$$
+
+代码如下:
+
+```c++{.line-numbers}
+const int modnum = 11;
+int HashTable[modnum];
+//哈希函数
+int Hash(int x)
+{
+    return x % modnum;
+}
+//插入新值
+void Insert(int x)
+{
+    int addr = Hash(x);
+    HashTable[addr] = x;
+}
+//查找元素
+bool IsExist(int x)
+{
+    int addr = Hash(x);
+    return HashTable[addr] == x;
+}
+```
 
 ## 冲突处理
+
+### 开放定址法
+
+### 链地址法
 
 ## 查找过程分析
 
