--- a/408数据结构/Note/查找.md
+++ b/408数据结构/Note/查找.md
@@ -2,7 +2,7 @@
 
 - 查找:在数据集合中寻找满足某种条件的数据元素的过程
 - 查找表:用于查找的数据集合
-- 静态查找表和动态查找表:若一个查找表的操作只涉及查找操作,则无须动态地修改查找表,此类查找表称为静态查找表.与此对应,需要动态地插入或删除的查找表称为动态查找表
+- 静态查找表和动态查找表:若一个查找表的操作只涉及查找操作,则无须动态地修改查找表,此类查找表称为静态查找表(适合静态查找表的有顺序查找、折半查找和散列查找).与此对应,需要动态地插入或删除的查找表称为动态查找表(适合动态查找表的有二叉排序树 BST、 二叉平衡树 AVL、B 树和 B+树).
 - 关键字:数据元素中唯一标识该元素的某个数据项的值
 - **平均查找长度**:在查找过程中,一次查找的长度是指需要比较的关键字次数,而平均查找长度则是所有查找过程中进行关键字的比较次数的平均值,其数学定义为
   $$
@@ -68,8 +68,9 @@ $$
   - 首先将给定值 key 与**表中中间位置**的元素比较,若相等,则查找成功,返回该元素的存储位置
   - 若不等,则所需查找的元素只能在中间元素以外的前半部分或后半部分
   - 然后在缩小的范围内继续进行同样的查找.重复上述步骤,直到找到为止或查找失败
-- 折半查找的过程可用二叉树来描述,被称为判定树.显然该判定树是一个二叉树
+- 折半查找的过程可用二叉树来描述,被称为判定树.显然该判定树是一个二叉树.该二叉树的形状取决于折半策略,根据向上取整或者向下取整策略的不同可形成不同的二叉树
   <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240604163727.png" width = 80%/></div>
+  <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240605151222.png" width = 80%/></div>
 
 ### <font color="red">代码</font>
 
@@ -102,6 +103,8 @@ int binarySearch(int start, int end, int key)
     \mathrm{ASL}=\dfrac{1}{n}\sum_{i=1}^{n}l_{i}=\dfrac{1}{n}(1\times1+2\times2+\cdots+h\times2^{h-1})=\dfrac{n+1}{n}\mathrm{log}_{2}(n+1)-1\approx\mathrm{log}_{2}(n+1)-1
   $$
   $h$是树的高度,并且元素个数为$n$时树高$h=\left\lceil\log_2(n+1)\right\rceil$.所以,折半查找的时间复杂度为$O(\log_2n)$平均情況下比顺序查找的效率高.
+- 对于一棵有 n 个关键字的二叉排序树来说,查找失败的结点有 $n+1$ 个
+  ![20240605151611](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240605151611.png)
 
 ## 分块查找
 
@@ -112,7 +115,7 @@ int binarySearch(int start, int end, int key)
 
 ### 性能分析
 
-分块查找的平均查找长度为索引查找和块内查找的平均长度之和。设索引查找和块内查找的平均查找长度分别为 $L_\mathrm{l}$和 $L_\mathrm{S}$,则分块查找的平均查找长度为
+分块查找的平均查找长度为索引查找和块内查找的平均长度之和.设索引查找和块内查找的平均查找长度分别为 $L_\mathrm{l}$和 $L_\mathrm{S}$,则分块查找的平均查找长度为
 
 $$
   ASL= L_{\mathrm{i} }+ L_{\mathrm{S} }
@@ -134,7 +137,7 @@ $$
 
 ## 基本概念
 
-- 散列函数(也称哈希函数):一个把查找表中的关键字映射成该关键字对应的地址的函数,记为 `Hash(key)=Addr`(这里的地址可以是数组下标、索引或内存地址等)。
+- 散列函数(也称哈希函数):一个把查找表中的关键字映射成该关键字对应的地址的函数,记为 `Hash(key)=Addr`(这里的地址可以是数组下标、索引或内存地址等).
 - 冲突和同义词:对不同的关键字进行散列计算可能得到同一散列地址,即 $\mathrm{key}_1\neq\mathrm{key}_2$,而 $H(\mathrm{key}_1)=H(\mathrm{key}_2)$,这种现象称为冲突.具有相同函数值的关键字对该散列函数来说称为同义词,$\mathrm{key}_1$与$\mathrm{key}_1$互为同义词.
 - 散列表(也称哈希表):根据关键字而直接进行访问的数据结构.
 - 装填因子 $\alpha$ :装填因子标志散列表的装满程度.
@@ -164,7 +167,7 @@ $$
 
 ### <font color="red">除留取余法</font>
 
-假定散列表表长为$m$,取一个不大于$m$ 但最接近或等于 $m$ 的质数$p$,利用以下公式把关键字转换成散列地址。散列函数为
+假定散列表表长为$m$,取一个不大于$m$ 但最接近或等于 $m$ 的质数$p$,利用以下公式把关键字转换成散列地址.散列函数为
 
 $$
   H(key)=key \% p
@@ -198,8 +201,93 @@ bool IsExist(int x)
 
 ### 开放定址法
 
+![20240605142918](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240605142918.png)
+
+开放定址法(也叫开放地址法)会把所有数据元素都存放在散列表中,当关键字散列到的地址单元已经被另外一个关键字占用的时候,就会使用某种方法尝试在地址空间中寻找其他的单元,直到找到一个空置单元.数学公式为:
+
+$$
+  H_{i}=(H(\mathrm{key})+d_{i})\:\%\:m
+$$
+
+式中,$H(\mathrm{key})$为散列函数; $i=1,2,\cdots,k(k\leq m-1);m$ 表示散列表表长; $d_i$ 为增量序列.
+以下为 4 种增量序列的取法:
+
+- 线性探测法,又称线性探测再散列法.$d_i=1,2,\cdots,m-1$它的特点是:冲突发生时,顺序查看表中下一个单元(探测到表尾地址 $m-1$时,下一个探测地址是表首地址 0 ),直到找出一个空闲单元(当表未填满时一定能找到一个空闲单元)或查遍全表.
+- 平方探测法,又称二次探测法.$d_i=1^2,-1^2,2^2,-2^2,\cdots,k^2,-k^2$,其中$k\leq m/2$,散列表长度$m$必须是一个可以表示成$4k+3$的素数
+- 双散列法,$d_i=i \times \text{Hash}_2(\text{key})$.需要使用两个散列函数,当通过第一个散列函数 $\text{H(key)}$ 得到的地址发生冲突时,则利用第二个散列函数 $\text{Hash}_{2}\text{(key)}$ 计算该关键字的地址增量.它的具体散列函数形式如下：
+  $$
+    H_{i}=\left(H(\mathrm{key})+i \times \mathrm{Hash}_{2}(\mathrm{key})\right)\%m
+  $$
+  初始探测位置 $H_0\text{=H(key)} \% \text{m}$ .$i$是冲突的次数,初始为 0.
+- 伪随机序列法. $d=$ 伪随机数序列
+
+线性探测的散列函数法如下:
+
+```c++{.line-numbers}
+const int modnum = 11;
+int HashTable[modnum];
+//哈希函数
+int Hash(int x)
+{
+    return x % modnum;
+}
+//插入新值
+void Insert(int x)
+{
+    int addr = Hash(x);
+    while (HashTable[addr] NOT NULL)
+        addr = (addr + 1) % modnum;
+    HashTable[addr] = x;
+}
+//查找元素
+bool IsExist(int x)
+{
+    int addr = Hash(x);
+    while (HashTable[addr] NOT NULL)
+    {
+        if (HashTable[addr] == x)
+            return true;
+        addr = (addr + 1) % modnum;
+    }
+    return false;
+}
+```
+
 ### 链地址法
 
-## 查找过程分析
+![20240605142731](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240605142731.png)
+代码如下:
 
-# 查找效率评估
+```c++{.line-numbers}
+const int modnum = 11;
+vector<int> HashTable[modnum];
+//哈希函数
+int Hash(int x)
+{
+    return x % modnum;
+}
+//插入新值
+void Insert(int x)
+{
+    int addr = Hash(x);
+    HashTable[addr].push_back(x);
+}
+//查找元素
+bool IsExist(int x)
+{
+    int addr = Hash(x);
+    int l = HashTable[addr].size();
+    for (int i = 0; i < l; i++)
+    {
+        if (HashTable[addr][i] == x)
+            return true;
+    }
+    return false;
+}
+```
+
+## 散列表性能分析
+
+- 散列表的查找效率取决于三个因素:散列函数,处理冲突的方法和装填因子.
+- 散列表的平均查找长度依赖于散列表的装填因子 $\alpha$ ,而不直接依赖于 $n$ 或 $m$.
+- 虽然散列表在关键字与记录的存储位置之间建立了直接映像,但由于"冲突"的产生, 使得散列表的查找过程仍然是一个给定值和关键字进行比较的过程。因此,仍然需要以平均查找长度作衡量散列表的查找效率的度量
