--- a/408数据结构/Note/树.md
+++ b/408数据结构/Note/树.md
@@ -1089,6 +1089,14 @@ p[find(a)] = find(b);
 d[find(a)] = distance; // 根据具体问题,初始化find(a)的偏移量
 ```
 
+## 堆
+
+### 堆的基础概念
+
+### 堆的性质
+
+### 堆的操作
+
 ## 树型查找
 
 <a id="section2"></a>
