图的定义部分修改

--- a/408数据结构/Note/图.md
+++ b/408数据结构/Note/图.md
@@ -1,71 +1,94 @@
 # 图的基本概念
 
-## 图的定义
+## 图的定义与概念
 
 - 图的定义: 图 (graph) 是一个二元组 $G=(V(G), E(G))$.其中 $V(G)$ 是非空集,称为 点集(vertex set),对于 $V$ 中的每个元素,我们称其为 顶点 (vertex)或节点 (node),简称点; $E(G)$ 为 $V(G)$ 各结点之间边的集合,称为边集(edge set).常用 $G=(V,E)$ 表示图.
-- 有向图与无向图
-  - 有向图的定义:若$E$是有向边(也称弧)的有限集合,则图$G$为有向图.弧是顶点的有序对,记为$<v,w>$.其中$v,w$ 是顶点,$v$称为弧尾,$w$称为弧头,$<v,w>$称为从$v$到$w$ 的弧,也称$v$邻接到$w$.
-  - 无向图的定义:若 $E$ 是无向边(简称边)的有限集合,则图 $G$ 为无向图.边是顶点的无序对,记为 $(v,w)$ 或 $(w,v)$.可以说 $w$ 和 $v$ 互为邻接点.边$(v,w)$依附于$w$ 和 $v$,或称边 $(v,w)$ 和 $v,w$ 相关联.
-- 简单图,多重图
 
+### <font color="red">无向图的定义与相关概念</font>
+
+- 无向图的定义:若 $E$ 是无向边(简称边)的有限集合,则图 $G$ 为无向图.边是顶点的无序对,记为 $(v,w)$ 或 $(w,v)$.可以说 $w$ 和 $v$ 互为邻接点.边$(v,w)$依附于$w$ 和 $v$,或称边 $(v,w)$ 和 $v,w$ 相关联.
+- <font color="red">连通,连通图,连通分量</font>
+  - 在无向图中,若从顶点$v$到顶点$w$有路径存在,则称$v$和$w$是连通的.
+  - 若图$G$中任意两个顶点都是连通的,则称图$G$为连通图,否则称为非连通图.
+  - 极小连通子图(生成树):要求既要保持连通又要使得边数最少.
+  - 无向图中的极大连通子图(要求其连通子图包含其所有边)称为连通分量.
+- 生成树,生成森林:
+
+  - 生成树:连通图的生成树是包含图中全部顶点的一个极小连通子图.若图中的顶点数为$n$,则它的生成树有$n-1$条边,生成树不一定唯一.
+    ![20240503230757](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240503230757.png)
+  - 生成森林:非连通图中,连通分量的生成树构成了非连通图的生成森林
+
+- 顶点的度:图中以该顶点为一个端点的边的数目
+  - 无向图中顶点$v$的度是指依附于该顶点的边的条数,记为 $TD(v)$.具有$n$个顶点,$e$条边的无向图中,所有顶点的度总和是边数的二倍,即 $\sum_{i=1}^nTD(v_i)=2e$
+
+> 概念辨析:极大连通子图,极小连通子图,连通分量,生成树,生成森林
+>
+> <div align=center><img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240504125057.png" width = 40%/></div>
+> 如图:c是一个非连通图,其由a和b两个连通图组成,对于c来说,a和b是它的两个连通分量,a和b分别是两棵生成树,共同组成了生成森林.
+
+### <font color="red">有向图的定义与相关概念</font>
+
+- 有向图的定义:若 $E$ 是有向边(也称弧)的有限集合,则图 $G$ 为有向图.弧是顶点的有序对,记为 $<v,w>$.其中 $v,w$ 是顶点,$v$称为弧尾,$w$称为弧头, $<v,w>$ 称为从 $v$到 $w$ 的弧,也称 $v$邻接到 $w$.
+- <font color="red">强连通,强连通图,强连通分量</font>:
+
+  - 强连通:有向图中,看从顶点 $v$ 到顺点 $w$ 和顶点 $w$ 到顶点 $V$ 之间都有路径,则称 $v$ 和 $w$ 是强连通的
+  - 强连通图:有向图 $G$ 中任意两个顶点都是强连通的
+  - 强连通分量:有向图中的极大强连通子图
+  <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240503231457.png" width = 80%/></div>
+
+- 度
+  - 有向图中顶点$v$的度分为入度和出度.
+  - 入度:入度是以顶点 $v$ 为终点的有向边的条数记为 $ID(v)$
+  - 出度:出度是以顶点 $v$为起点的有向边的数目,记为 $OD(v)$.
+  - 具有 $n$个顶点, $e$条边的有向图中,全部顶点的入度之和与出度之和相等,等于边数.即 $\sum_{i=1}^n ID(v_i)=\sum_{i=1}^n OD(v_i)=e$
+
+### <font color="red">完全图的定义与相关概念</font>
+
+- 无向完全图:设 $G$ 为一个有 $n$ 个节点的无向简单图,若 $G$ 中每个顶点都与其余 $n-1$ 个顶点有边相连(**任意两个顶点都有边相连**),则称 $G$ 为 n 阶无向完全图,简称为 $n$ 阶完全图,记做$K_n$,边与点的关系是$\dfrac{n*(n-1)}{2}$
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240503221330.png" width = 20%/></div>
+
+- 有向完全图:设 $G$ 为一个有 $n$ 个节点的有向简单图,若 $G$ 中每个顶点都有连到其余 $n-1$ 个顶点的边,且都有这些节点连向它的边(**图中任意两个顶点都有两条方向相反的边相连**),则称 $G$ 为 $n$ 阶有向完全图
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240503221358.png" width = 20%/></div>
+
+### 其他的特殊图
+
+- 简单图,多重图
   - 简单图(simple graph):若一个图中没有顶点到自身的环和重复的边,它被称为简单图
   - 多重图:如果一张图中有自环或重边,则称它为多重图(multigraph)
-  <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240503224023.png" width = 20%/></div>
+  <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240503224023.png" width = 40%/></div>
+- 稠密图,稀疏图:
+  - 稠密图:若一张图的边数远小于其点数的平方,那么它是一张稀疏图 (sparse graph)
+  - 若一张图的边数接近其点数的平方,那么它是一张稠密图 (dense graph)
+  - 这两个概念并没有严格的定义,一般用于讨论时间复杂度为 $O(|V|^2)$ 的算法与 $O(|E|)$ 的算法的效率差异(在稠密图上这两种算法效率相当,而在稀疏图上 $O(|E|)$ 的算法效率明显更高)
 
-- 完全图与竞赛图:
+### 图中的其他术语
 
-  - 完全图(无向图):设 $G$ 为一个有 $n$ 个节点的无向简单图,若 $G$ 中每个顶点都与其余 $n-1$ 个顶点有边相连,则称 $G$ 为 n 阶无向完全图,简称为 $n$ 阶完全图,记做$K_n$,边与点的关系是$\dfrac{n*(n-1)}{2}$
-  <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240503221330.png" width = 20%/></div>
+- 路径和路径长度,简单路径:
+  - **路径**:在图中,顶点 $\mathrm{V_p}$ 到顶点 $\mathrm{V_q}$ 之间的顶点序列 $\mathrm{V_p},\mathrm{V_a},\mathrm{V_b}...\mathrm{V_q}$
+  - 路径长度:路径上边的数目,若该路径最短则称之为距离
+  - 简单路径:序列中顶点不重复出现的路径,而且自身不存在环
+- 边的权,网络(带权图):
+  - 权:图中边具有与之相关的数值,称之为权重,权重可以表示从一个顶点到另一个顶点的距离、花费的代价等
+  - 这种带权图也叫做网络
+- 回路(环):第一个顶点和最后一个顶点相同的路径.**注意:若无向图有 $n$ 个顶点,并且有大于 $n-1$ 条边,则此图一定有环**
 
-  - 完全图(有向图):设 $G$ 为一个有 $n$ 个节点的有向简单图,若 $G$ 中每个顶点都有连到其余 $n-1$ 个顶点的边,且都有这些节点连向它的边,则称 $G$ 为 $n$ 阶有向完全图
-  <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240503221358.png" width = 20%/></div>
-
-  - 竞赛图:基于 $n$ 阶无向完全图,给每条边任意确定一个方向形成的图称为 $n$ 阶竞赛图
-  <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240503221615.png" width = 20%/></div>
-
-- 子图:设$G=<V,E>,G'=<V',E'>$ 为两个图(同为无向图或有向图),如果$V' \subseteq V$且$E'\subseteq E$,则称图 $G'$为图$G$的子图,$G$称为图$G'$的母图,记作$G'\subseteq G$
+- 子图:设 $G=<V,E>,G'=<V',E'>$ 为两个图(同为无向图或有向图),如果$V' \subseteq V$且$E'\subseteq E$,则称图 $G'$ 为图 $G$ 的子图,$G$ 称为图 $G'$ 的母图,记作 $G'\subseteq G$
 
   - 子图有可能和自己一模一样,但是真子图不可能一模一样
   - 如果$V'=V,$则称$G'$为$G$的生成子图(点数一样但是边数不一样)
   - 如果$V'\subset V$或$E' \subset E$,则称$G'$为$G$的真子图
   <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240503222126.png" width = 70%/></div>
 
-- 稠密图,稀疏图:
-  - 稠密图:若一张图的边数远小于其点数的平方,那么它是一张稀疏图 (sparse graph)
-  - 若一张图的边数接近其点数的平方,那么它是一张稠密图 (dense graph)
-  - 这两个概念并没有严格的定义,一般用于讨论时间复杂度为 $O(|V|^2)$ 的算法与 $O(|E|)$ 的算法的效率差异(在稠密图上这两种算法效率相当,而在稀疏图上 $O(|E|)$ 的算法效率明显更高)
-- <font color="red">连通,连通图,连通分量</font>
-  - 在无向图中,若从顶点$v$到顶点$w$有路径存在,则称$v$和$w$是连通的.若图$G$中任意两个顶点都是连通的,则称图$G$为连通图,否则称为非连通图.无向图中的极大连通子图称为连通分量.
-- 生成树,生成森林:
-  - 生成树:(针对无向图):连通图的生成树是包含图中全部顶点的一个极小连通子图.若图中的顶点数为$n$,则它的生成树有$n-1$条边,生成树不一定唯一.
-    ![20240503230757](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240503230757.png)
-  - 生成森林:非连通图中,连通分量的生成树构成了非连通图的生成森林
+## 图的部分性质
 
-> 概念辨析:极大连通子图,极小连通子图,连通分量,生成树,生成森林
->
-> <div align=center><img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240504125057.png" width = 70%/></div>
-> 如图:c是一个非连通图,其由a和b两个连通图组成,对于c来说,a和b是它的两个连通分量,a和b分别是两棵生成树,共同组成了生成森林.
-
-## 图的基本术语
-
-- 顶点的度,出度和入度:
-  - 顶点的度:图中以该顶点为一个端点的边的数目
-  - 无向图中顶点$v$的度是指依附于该顶点的边的条数,记为 $TD(v)$.具有$n$个顶点,$e$条边的无向图中,所有顶点的度总和是边数的二倍,即 $\sum_{i=1}^nTD(v_i)=2e$
-  - 有向图中顶点$v$的度分为入度和出度.入度是以顶点 $v$ 为终点的有向边的条数记为$ID(v)$
-  - 出度是以顶点$v$为起点的有向边的数目,记为 $OD(v)$.具有$n$个顶点,$e$条边的有向图中,全部顶点的入度之和与出度之和相等,等于边数.即$\sum_{i=1}^n ID(v_i)=\sum_{i=1}^n OD(v_i)=e$
-- 路径和路径长度,简单路径:
-  - 路径:在图中,顶点 $\mathrm{V_p}$ 到顶点 $\mathrm{V_q}$ 之间的顶点序列 $\mathrm{V_p},\mathrm{V_a},\mathrm{V_b}...\mathrm{V_q}$
-  - 路径长度:路径上边的数目,若该路径最短则称之为距离
-  - 简单路径:序列中顶点不重复出现的路径,而且自身不存在环
-- 边的权,网络(带权图):
-  - 权:图中边具有与之相关的数值,称之为权重,权重可以表示从一个顶点到另一个顶点的距离、花费的代价等
-  - 这种带权图也叫做网络
-- 回路(环):第一个顶点和最后一个顶点相同的路径.注意:若无向图有 $n$ 个顶点,并且有大于 $n-1$ 条边,则此图一定有环
-- <font color="red">强连通,强连通图,强连通分量</font>:
-  - 强连通:有向图中,看从顶点 $v$ 到顺点 $w$ 和顶点 $w$ 到顶点 $V$ 之间都有路径,则称 $v$ 和 $w$ 是强连通的
-  - 强连通图:有向图 $G$ 中任意两个顶点都是强连通的
-  - 强连通分量:有向图中的极大强连通子图
-  <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240503231457.png" width = 80%/></div>
+- 无向图边数 $\times 2=$ 各顶点度数之和
+- 有向图边数=各顶点的入度之和=各顶点的出度之和
+- 一个连通图的生成树是一个极小连通子图,是无环的
+- 完全无向图:边数为 $\dfrac{\mathrm{n(n-1)}}2$
+- 完全有向图:边数为 $n(n-1)$
+- 对于一个有 $n$ 个顶点的图
+  - 若是连通无向图，其边的个数至少为 $n-1$ (边最少即构成一棵树的情形)
+  - 若是强连通有向图，其边的个数至少是 $n$ (边最少即构成一个有向环的情形)
 
 # 图的存储和操作
 
@@ -178,9 +201,8 @@ Set_edge_value(G,x,y,v):设置图G中边(x,y)或<x,y>对应的权值为v.
 
 ### 算法分析
 
-- $DFS$ 中文名为深度优先搜索,大致来说就是从图中一个节点开始,每次寻找可以前往的下一个点,采用递归调用的方式进行下去的算法.在图遍历的过程当中,$DFS$ 会对其访问过的节克打上标记避免重复访问.
+- $DFS$ 中文名为深度优先搜索,大致来说就是从图中一个节点开始,每次寻找可以前往的下一个点,采用递归调用的方式进行下去的算法.在图遍历的过程当中,$DFS$ 会对其访问过的节点打上标记避免重复访问.
 - $DFS$ 过程中,在递归栈中存储的即为起始节点到当前节点的路径.在当前节点找不到节点继续时,会往上回溯.
-- 深度优先生成树
 
 ### 算法过程
 
@@ -609,4 +631,4 @@ inline void TopoSort()
   - 从汇点出发，令 $v_t($汇点$)=v_e($汇点), 按逆拓扑有序求其余顶点的最迟发生时间 $\nu_t()$
   - 根据各顶点的 $v_e()$值求所有弧的最早开始时间 $e()$。
   - 根据各顶点的 $v_{l}()$值求所有弧的最迟开始时间 $l()$。
-  - 求 AOE 网中所有活动的差额$d()$,找出所有$d()=0$的活动构成关键路径。
+  - 求 AOE 网中所有活动的差额 $d()$,找出所有 $d()=0$ 的活动构成关键路径。
