时间复杂度进行重新编写

--- a/408数据结构/Note/绪论.md
+++ b/408数据结构/Note/绪论.md
@@ -110,6 +110,16 @@
 - 加法规则：$T(n)=T_1(n)+T_2(n)=O(f(n))+O(g(n))=O(\max(f(n),g(n)))$
 - 乘法规则：$T(n)=T_1(n){\times}T_2(n)=O(f(n)){\times}O(g(n))=O(f(n){\times}g(n))$
 
+#### 渐进复杂度
+
+不同$O$的意义：
+
+- $\Theta$,读音：theta,等于的意思。
+- $O$,读音：big-oh, 小于等于的意思。
+- $o$,读音：small-oh,小于的意思。
+- $\Omega$,读音：big omega, 大于等于的意思。
+- $\omega$,读音：small omega,大于的意思。
+
 - 常见渐进时间复杂度
   $$
   O(1)<O(\log_2n)<O(n)<O(n\text{log}_2n)<O(n^2)<O(n^3)<O(2^n)<O(n!)<O(n^n)
@@ -121,9 +131,15 @@
 
 定义法求解流程：
 
-- 定义法表达出自变量变化过程
-- 计算次数
-- 重复上述两步直至时间复杂度定义表达式中有且仅有一个自变量
+- 单层循环：
+  - 计算基本语句的执行次数$t$,如果是常数级，就记为 1，写出循环体中自变量$i$的变化过程
+  - 计算最终基本语句的执行次数与$n$的关系
+- 多层循环：
+  - 内层循环变量不影响内层循环，直接将两个时间复杂度相乘即可
+  - 外层循环变量影响内层循环
+    - 写出内，外层循环中变量的变化过程
+    - 从内向外依次求解
+    - 使用求和公式计算执行次数
 
 1. 单层循环
 
@@ -135,25 +151,9 @@ for (int i = 1; i <= n; i++)
 }
 ```
 
-第一步：$\sum_{\mathrm{i~in~\{1,2.,..,n\}}}$
-第二步：$n$
-时间复杂度为$O(n)$
-
----
-
-```c++
-int i = 1;
-int count = 0;
-while (i <= n)
-{
-    count++;
-    i ++;
-}
-```
-
-第一步：$\sum_{\mathrm{i~in~\{1,2.,..,n\}}}$
-第二步：$n$
-时间复杂度为$O(n)$
+第一步：`count++`是常数级执行的语句，因此，记为 1。之后循环体中自变量`i`的$\sum_{\mathrm{i~in~\{1,2.,..,n\}}}1$
+第二步：执行次数为$i$次。$i$与$n$的关系为$i\leq n$
+则时间复杂度为$O(n)$
 
 ---
 
@@ -163,9 +163,9 @@ for (int i = 1; i <= n; i*=2)
     count++;
 ```
 
-第一步：$\sum_{\mathrm{i~in~\{1,2.,..,2^k\}}}$ [^3]
-第二步：$k=\log_2 n$
-时间复杂度为$O(n)$
+第一步：`count++`是常数级执行的语句，因此，记为 1。之后循环体`i`的变化量为$\sum_{\mathrm{i~in~\{1,2.,..,2^k\}}}1$ [^3]
+第二步：执行次数为$2^k$次，$2^k=n$,$k=\log_2 n$
+时间复杂度为$O(\log_n)$
 [^3]:因为自变量$i==n$时循环停止,因此$i==2^k$时候停止
 
 ---
@@ -192,11 +192,7 @@ for (int i = 1; i <= n; i++)
         count++;
 ```
 
-第一步：$\sum_{\mathrm{i~in~\{1,2.,..,n\}}}\sum_{\mathrm{j~in~\{1,2.,..,n\}}}$
-第二步：$\sum_{\mathrm{i~in~\{1,2.,..,n\}}}n$[^4]
-第三步：$n*n$
-
-时间复杂度为$O(n^2)$
+外层循环变量不影响内层循环，直接将两个时间复杂度相乘，结果为时间复杂度为$O(n^2)$
 
 [^4]: 该式的数学含义为$i$从$1$加到$n$,加$n$次
 
@@ -244,7 +240,7 @@ for (int i = 1; i <= n; i*=2)
 
 ---
 
-1. 三层循环
+3. 三层循环
 
 ```c++
 int count = 0;
@@ -257,10 +253,27 @@ for (int i = 1; i <= n; i++)
 第一步：$\sum_{\mathrm{i~in~\{1,2.,..,n\}}}\sum_{\mathrm{j~in~\{1,2.,..,i\}}}\sum_{\mathrm{k~in~\{1,2.,..,j\}}}$
 第二步：$\sum_{\mathrm{i~in~\{1,2.,..,n\}}}\sum_{\mathrm{j~in~\{1,2.,..,i\}}}j$
 第三步：$\sum_{\mathrm{i~in~\{1,2.,..,n\}}}\dfrac{i(i+1)}{2}$
-第四步：${\frac{1}{2}}\Big[{\big(}1^{2}+2^{2}+3^{2}+\ldots+n^{2}{\big)}+{\big(}1+2+3+\ldots+n{\big)}{\big]}={\frac{1}{2}}\Big[{\dfrac{n(n+1)(2n+1)}{6}}+{\dfrac{n(n+1)}{2}}\Big] =\dfrac{n(n+1)(n+2)}6$
+第四步：${\dfrac{1}{2}}\Big[{\big(}1^{2}+2^{2}+3^{2}+\ldots+n^{2}{\big)}+{\big(}1+2+3+\ldots+n{\big)}{\big]}={\frac{1}{2}}\Big[{\dfrac{n(n+1)(2n+1)}{6}}+{\dfrac{n(n+1)}{2}}\Big] =\dfrac{n(n+1)(n+2)}6$
 时间复杂度为$O(n^3)$
 
-1. 递归
+---
+
+#### Master 定理计算递归时间复杂度
+
+![20240810161925](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240810161925.png)
+
+- Master 定理主要用于求解递归的时间复杂度
+- **Master 定理主要内容**：将一个规模为$n$的问题，通过分治得到$a$个规模为$\dfrac nb$的子问题，每次递归带来的额外计算为$f(n)$,那么我们得到以下关系式：
+  $$T(n)=aT(\dfrac nb)+f(n)$$
+  则可存在如下三种情况：
+  1. 当 $f(n)=\mathcal{O}(n^{(\log_ba)-\epsilon})$ 其中 $\epsilon>0$ 是一个常数(相当于$\log_ba>f(n)$ ),则有$T(n)=\Theta(n^{\text{log}_ba})$
+  2. 当$f(n)=\Theta(n^{\log_ba})$,则有 $T(n)=\Theta (n^{\log_ b a} \log n)$
+  3. 当$f(n)=\Omega(n^{(\log_ba)+\epsilon})$其中$\epsilon>0$是一个常数(相当于$\log_ba<f(n)$),且对于一个常数$c<1$和所有足够大的$n$有$af(\dfrac nb)\leq cf(n)$ (这一条件在这里可以暂时忽略不看，但在证明时起到至关重要的作用),则有$T(n)=\Theta(f(n)).$
+     根据上面的三种情况，举出以下例子：
+  - $T(n)=4T(\dfrac n2)+n$,此时 $a=4,b=2,\epsilon=1$,那么$\log_ba=\log_24=2,f(n)=\mathcal{O}(n^{\log_ba-\epsilon})=\mathcal{O}(n^{2-1})$,$f(n)$ 成立，所以$T(n)=\Theta(n^{\log_ba})=\Theta(n^2)$
+  - $T(n)=2T(\dfrac n2)+n$,此时 $a=2,b=2$,那么$\log_ba=\log_22=1,f(n)=\Theta(n^{\log_ba})=\Theta(n)$,$f(n)$ 成立，所以 $T(n)=\Theta(n^{\log_ba} \log n)=\Theta(n\log n).$
+  - $T(n)=4T(\dfrac n2)+n^3$,此时 $a=4,b=2,\epsilon=1$,那么$\log_ba=\log_24=2,f(n)=$ $\Omega(n^{\log_ba+\epsilon})=\Omega(n^{2+1})$,对于$c=\dfrac{2}{3}$和够大的$n$,$\left(af(\dfrac nb)=4(\dfrac n2)^3=4(\dfrac{n^3}8)=\dfrac{n^3}2\right)\leq$ $\left(cf(n)=\dfrac{2n^3}3\right)$,$f(n)$ 成立，所以$T(n)=\Theta(f(n))=\Theta(n^3)$
+  - $T(n)=2T(\dfrac n2)+n\log n$,此时$a=2,b=2,k=1$,那么$\log_b a=\log_2 2= 1,f(n)=\Theta(n^{\log_b a} \log^{k}n)=\Theta(n\log n),f(n)$ 成立，所以$T(n)=\Theta(n^{\log_ba}\log^{k+1}n)=\Theta(n\log^2n)$。
 
 ```c++
 int fact(int n){
@@ -270,18 +283,6 @@ int fact(int n){
 ```
 
 代码由一个嵌套函数构成,一层递归其实就是一层`for`循环,那么上述代码的时间复杂度为$O(n)$
-
----
-
-5. 例题：
-
-```c++
-int count = 0;
-for (int i = 1; i <= n; i*=2)
-    for (int j = 1; j <= i; j++)
-        for (int k = 1; k <= j; k++)
-            count++;
-```
 
 ### 空间复杂度分析
 
@@ -353,4 +354,5 @@ int fact(int n){
 递归代码的空间复杂度即位递归的深度,即空间复杂度为$S(n)=O(n)$
 
 # 本章易错总结
+
 1. 有序表是指关键字有序的线性表,仅描述元素之间的逻辑关系,因此有序表是逻辑结构
